crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_default_py312.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_default_py312.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..149,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 44..65,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 49..50,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 50..59,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 51..58,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 51..52,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 55..58,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            runtime_type_params: None,
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 62..65,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 66..87,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 70..71,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 71..80,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 72..79,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 72..73,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 76..79,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            runtime_type_params: None,
                        },
                    ),
                    parameters: Parameters {
                        range: 80..82,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 84..87,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 84..87,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 88..111,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 94..95,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 95..104,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 96..103,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 96..97,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 100..103,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            runtime_type_params: None,
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 104..106,
                            node_index: NodeIndex(None),
                            args: [],
                            keywords: [],
                            runtime_args: None,
                            runtime_bases: None,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 108..111,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 108..111,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_body: None,
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 112..148,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("D"),
                        range: 118..119,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 119..141,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 120..121,
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 120..121,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 123..130,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 123..124,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 127..130,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 132..140,
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 132..133,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 136..140,
                                                    id: Name("uint"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            runtime_type_params: None,
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 141..143,
                            node_index: NodeIndex(None),
                            args: [],
                            keywords: [],
                            runtime_args: None,
                            runtime_bases: None,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 145..148,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 145..148,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.12"}
2 | type X[T = int] = int
  |          ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
3 | def f[T = int](): ...
4 | class C[T = int](): ...
  |


  |
1 | # parse_options: {"target-version": "3.12"}
2 | type X[T = int] = int
3 | def f[T = int](): ...
  |         ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |


  |
2 | type X[T = int] = int
3 | def f[T = int](): ...
4 | class C[T = int](): ...
  |           ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
5 | class D[S, T = int, U = uint](): ...
  |


  |
3 | def f[T = int](): ...
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |              ^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)


  |
3 | def f[T = int](): ...
4 | class C[T = int](): ...
5 | class D[S, T = int, U = uint](): ...
  |                       ^^^^^^ Syntax Error: Cannot set default type for a type parameter on Python 3.12 (syntax was added in Python 3.13)
